--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -41,7 +41,7 @@
 										<input type="button" value="Borrar"	style="text-align: center;" ng-click="linkToDeleteBook(book.id)" />
 									</td>
 									<td width="50">
-										<input type="button" value="Prestar"	style="text-align: center;" ng-click="linkToLendBook(book.id)" />
+										<input type="button" value="Prestar" style="text-align: center;" ng-click="linkToLendBook(book.id)" />
 									</td>
 									<!-- End Buttons -->
 									
@@ -52,7 +52,7 @@
 				</div>
 				<div class="botones">
 					<input type="button" id="createBookButton"
-						value="Crear nuevo libro" ng-click="linkToCreateBook()"/>
+						value="Crear nuevo libro" class="btn btn-primary" ng-click="linkToCreateBook()"/>
 				</div>
 				<div class="Clear"></div>
 			</div>
