--- a/dev/Tpl/src/main/webapp/app/views/lendBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/lendBookPage.html
@@ -1,34 +1,20 @@
 <section id="lendBook">
 	<div ng-controller="lendBookCtrl">
-		<div class="ContenedorContent">
-<!-- 			<div id="feedbackPanel" /> -->
-			<div class="ContenedorContentBox">
-				<h2>LIBROS</h2>
-				<div class="Contenedor fondoGrisClaro">
-					<div class="busquedas">
-						<form id="bookLendingForm">
-							<br> 
-							<label>
-								<h5>
-									Prestar libro al usuario
-								</h5>
-							</label> 
-<!-- 							<select wicket:id="usersdropdown"> -->
-							</select> 
-							<br /> <br />
-							<div class="linea">
-								<input type="button" value="Volver" ng-click="backToHome()"/>
-								<div class="botones">
-									<input type="button" value="Cancelar" id="cancelButton" /> 
-									<input type="button" value="Prestar" id="lendBookButton" /> 
-									<br> <br>
-								</div>
-							</div>
-							<div class="Clear"></div>
-						</form>
-					</div>
+		<h2>LIBROS</h2>
+			<form id="bookLendingForm">
+			<br> 
+			<label>
+				<h5>
+					Prestar libro al usuario
+				</h5>
+			</label> 
+			<br /> <br />
+				<div class="btn-group">
+				  <button type="button" class="btn btn-default" ng-click="backToHome()">Volver</button> <!-- VOLVER Y CANCELAR NO HACEN LO MISMO? -->
+				  <button type="button" class="btn btn-default" ng-click="reset()">Cancelar</button>
+				  <button type="button" class="btn btn-default" ng-click="save(newBook)">Prestar</button>
 				</div>
-			</div>
-		</div>
+			<div class="Clear"></div>
+		</form>
 	</div>
 </section>
