--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -1,52 +1,70 @@
-<section id="bookListPage">
+<section id="bookListPage" class="container">
 <div ng-controller="bookListCtrl">
 <div>
 	<div id="feedbackPanel" />
-		<div>
-			<div class="col-md-2">
-			<!--Sidebar content-->
-				B&uacute;squeda: 
-					<input type="text" class="form-control" placeholder="Ingrese libro a buscar">
-			</div>	
-			<h4>Libros Disponibles	</h4>
-				<button type="button" class="btn btn-primary" ng-click="linkToCreateBook()">Crear Nuevo Libro</button>
-
-				<table border="0" cellspacing="0" cellpadding="0">
-					<tr ng-repeat="book in books | filter:query"> <!-- NO ESTA FILTRANDO BIEN -->
-						
-						<!-- Fields -->
-						<td data-title="'Título'" width="180">
-							<span class="textoDestacado" style="text-align: center;"> {{book.name}}</span>
-						</td>
-						<td data-title="'Descripción'" width="320">
-							<span class="textoDestacado" style="text-align: center;">{{book.description}}</span>
-						</td>
-						<td data-title="'Editorial'" width="320">
-							<span	class="textoDestacado" style="text-align: center;">{{book.publisher}}</span>
-						</td>
-						<td data-title="'Categorías'" width="320">
-							<span class="textoDestacado" style="text-align: center;">{{book.categories}}</span>
-						</td>
-						<!-- End Fields -->
-
-						<!-- Buttons --> 
-						<!--div class="btn-group"> ALGO ASI ES CON EL BOOTSTRAP, HAY Q FIJARSE BIEN COMO XQ QUEDAN ARRIBA Y SOLO 1 VEZ
-						  <button type="button" class="btn btn-default" ng-click="linkToEditBook(book.id)">Editar</button>
-						  <button type="button" class="btn btn-default" ng-click="linkToDeleteBook(book.id)">Borrar</button>
-						  <button type="button" class="btn btn-default" ng-click="linkToLendBook(book.id)">Prestar</button>
-						</div-->
-						<td width="50">
-							<input type="button" value="Editar"	style="text-align: center;" ng-click="linkToEditBook(book.id)" />
-						</td>
-						<td width="50">
-							<input type="button" value="Borrar"	style="text-align: center;" ng-click="linkToDeleteBook(book.id)" />
-						</td>
-						<td width="50">
-							<input type="button" value="Prestar" style="text-align: center;" ng-click="linkToLendBook(book.id)" />
-						</td>
-						<!-- End Buttons -->
-						
-				</tr>
+			<div>
+				<form class="form-inline">
+					<div class="form-group col-md-9">
+						<div class="input-group col-sm-12">
+							<input type="text" class="form-control" placeholder="Ingrese libro a buscar">
+							<span class="input-group-btn">
+								<button class="btn btn-primary">Buscar!</button>
+							</span>
+						</div>				
+					</div>
+					<div class="form-group col-md-3">
+						<button type="button" class="btn btn-primary col-sm-12" ng-click="linkToCreateBook()">Crear Nuevo Libro</button>
+					</div>
+				</form>
+				<!-- Agregar espacio entre los divs y sacar estos brs -->
+				<br /><br /><br />
+			</div>
+			
+			<div class="col-md-12">
+				<table class="table table-striped table-bordered text-center">
+					<caption> <strong> Libros Disponibles </strong> </caption>
+					<thead class="text-center">
+						<tr>
+							<th class="text-center"> T&iacute;tulo </th>
+							<th class="text-center"> Descripci&oacute;n </th>
+							<th class="text-center"> Editorial </th>
+							<th class="text-center"> Categor&iacute;a </th>
+							<!--  este colspan es temporal, buscar una solucion mas elegante -->
+							<th class="text-center" colspan="3"> Acciones </th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>						
+							<!-- Fields -->
+							<!-- Hacer los td con vertical-align:middle -->							
+							<td>
+								Titulo <!-- {{book.name}} --> 
+							</td>
+							<td>
+								Descripcion <!-- {{book.description}}  -->
+							</td>
+							<td>
+								Editorial <!--  {{book.publisher}}  -->
+							</td>
+							<td>
+								Categorias <!-- {{book.categories}}  -->
+							</td>
+							<!-- End Fields -->
+	
+							<!-- Buttons --> 
+							<td>
+								<button type="button" class="btn btn-default btn-sm" ng-click="linkToEditBook(book.id)">Editar</button>
+							</td>
+							<td>
+								<button type="button" class="btn btn-default btn-sm" ng-click="linkToDeleteBook(book.id)">Borrar</button>
+							</td>
+							<td>
+								<button type="button" class="btn btn-default btn-sm" ng-click="linkToLendBook(book.id)">Prestar</button>
+							</td>
+							<!-- End Buttons -->
+							
+						</tr>
+					</tbody>
 			</table>
 		</div>
 		<div class="Clear"></div>
