--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -2,10 +2,10 @@
 <div ng-controller="bookListCtrl">
 <div>
 	<div id="feedbackPanel" />
-			<div>
-				<form class="form-inline">
+			<div class="row">
+				<form role="form" class="col-md-12">
 					<div class="form-group col-md-9">
-						<div class="input-group col-sm-12">
+						<div class="input-group col-md-12">
 							<input type="text" class="form-control" placeholder="Ingrese libro a buscar">
 							<span class="input-group-btn">
 								<button class="btn btn-primary">Buscar!</button>
@@ -13,7 +13,7 @@
 						</div>				
 					</div>
 					<div class="form-group col-md-3">
-						<button type="button" class="btn btn-primary col-sm-12" ng-click="linkToCreateBook()">Crear Nuevo Libro</button>
+						<button type="button" class="btn btn-primary col-md-12" ng-click="linkToCreateBook()">Crear Nuevo Libro</button>
 					</div>
 				</form>
 				<!-- Agregar espacio entre los divs y sacar estos brs -->
