--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -1,4 +1,4 @@
-<section id="bookListPage" class="container">
+<section id="bookListPage">
 <div ng-controller="bookListCtrl">
 <div>
 	<div id="feedbackPanel" />
