--- a/dev/Tpl/src/main/webapp/app/views/lendBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/lendBookPage.html
@@ -10,7 +10,7 @@
 			</label> 
 			<br /> <br />
 				<div class="btn-group">
-				  <button type="button" class="btn btn-default" ng-click="backToHome()">Volver</button> <!-- VOLVER Y CANCELAR NO HACEN LO MISMO? -->
+				  <button type="button" class="btn btn-default" ng-click="backToHome()">Volver</button>
 				  <button type="button" class="btn btn-default" ng-click="reset()">Cancelar</button>
 				  <button type="button" class="btn btn-default" ng-click="save(newBook)">Prestar</button>
 				</div>
