--- a/dev/Tpl/src/main/webapp/app/views/createBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/createBookPage.html
@@ -8,27 +8,27 @@
 				<!-- TITULO -->
 				<div class="form-group">
 					<label class="control-label">T&iacute;tulo: </label> <input
-						required type="text" class="form-control" ng-model="newBook.name"
+						type="text" class="form-control" ng-model="newBook.name"
 						ng-required="true" id="name" maxlength="150" />
 				</div>
 				<!-- DESCRIPCION -->
 				<div class="form-group">
-					<label class="">Descripci&oacute;n: </label> <input required
-						type="text" class="form-control" ng-model="newBook.description"
+					<label class="">Descripci&oacute;n: </label> <input type="text"
+						class="form-control" ng-model="newBook.description"
 						ng-required="true" id="description" />
 
 				</div>
 				<!-- EDITORIAL -->
 				<div class="form-group">
-					<label class="">Editorial: </label> <input required type="text"
+					<label class="">Editorial: </label> <input type="text"
 						class="form-control" ng-model="newBook.publisher"
 						ng-required="true" id="publisher" />
 
 				</div>
 				<!-- SELECT PAISES -->
 				<div class="form-group">
-					<label class="">Pa&iacute;s: </label> <select required
-						class="form-control" ng-model="newBook.country" ng-required="true">
+					<label class="">Pa&iacute;s: </label> <select class="form-control"
+						ng-model="newBook.country" ng-required="true">
 						<option>Argentina</option>
 						<option>Brasil</option>
 						<option>Uruguay</option>
@@ -37,12 +37,16 @@
 
 				<!-- CHECKBOX CATEGORIAS -->
 				<div class="form-group">
-					<label class="">Categorias: </label>
+					<label class="">Categorias:</label>
 					<!--  <input class=""
 						wicket:id="selectCheckBox" id="selectCheckBox1" type="checkbox" />
 					<strong><span wicket:id="name" id="name" /></strong> -->
-					<input class="" id="selectCheckBox1" type="checkbox" />
-
+					<div class="col-md-8 col-md-offset-2 checkbox">
+						<label class="checkbox-inline"><input class=""
+							id="selectCheckBox1" type="checkbox" /> eBook</label> <label
+							class="checkbox-inline"><input class=""
+							id="selectCheckBox2" type="checkbox" /> F&iacute;sico</label>
+					</div>
 				</div>
 				<!-- BOTONES -->
 				<div class="col-md-8 col-md-offset-2">
