--- a/dev/Tpl/src/main/webapp/app/views/editBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/editBookPage.html
@@ -2,7 +2,7 @@
 	<div class="container jumbotron col-md-6 col-md-offset-3"
 		ng-controller="editBookCtrl">
 
-		<form  name="editBookForm" novalidate id="bookDataEditionForm">
+		<form name="editBookForm" novalidate id="bookDataEditionForm">
 			<div class="col-md-8 col-md-offset-2" id="feedbackPanel">
 				<fieldset>
 					<legend> Editar Libro </legend>
@@ -32,9 +32,16 @@
 					</div>
 					<!-- CHECKBOX CATEGORIAS -->
 					<div class="form-group">
-						<label class="">Categorias: </label>
-						<!-- <div wicket:id="bookCategoriesListPanel"></div> -->
-						<input class="" id="selectCheckBox1" type="checkbox" />
+						<label class="">Categorias:</label>
+						<!--  <input class=""
+						wicket:id="selectCheckBox" id="selectCheckBox1" type="checkbox" />
+					<strong><span wicket:id="name" id="name" /></strong> -->
+						<div class="col-md-8 col-md-offset-2 checkbox">
+							<label class="checkbox-inline"><input class=""
+								id="selectCheckBox1" type="checkbox" /> eBook</label> <label
+								class="checkbox-inline"><input class=""
+								id="selectCheckBox2" type="checkbox" /> F&iacute;sico</label>
+						</div>
 					</div>
 
 
