--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -4,13 +4,8 @@
 	<div id="feedbackPanel" />
 			<div class="row">
 				<form role="form" class="col-md-12">
-					<div class="form-group col-md-9">
-						<div class="input-group col-md-12">
-							<input type="text" class="form-control" placeholder="Ingrese libro a buscar" ng-model="query">
-							<span class="input-group-btn">
-								<button class="btn btn-primary">Buscar!</button>
-							</span>
-						</div>				
+					<div class="form-group col-md-9">					
+						<input type="text" class="form-control col-md-12" placeholder="Ingrese el libro que desea buscar" ng-model="query">				
 					</div>
 					<div class="form-group col-md-3">
 						<button type="button" class="btn btn-primary col-md-12" ng-click="linkToCreateBook()">Crear Nuevo Libro</button>
