--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -8,7 +8,7 @@
 						<input type="text" class="form-control col-md-12" placeholder="Ingrese el libro que desea buscar" ng-model="query">				
 					</div>
 					<div class="form-group col-md-3">
-						<button type="button" class="btn btn-primary col-md-12" ng-click="linkToCreateBook()">Crear Nuevo Libro</button>
+						<button type="button" class="btn btn-hexacta col-md-12" ng-click="linkToCreateBook()">Crear Nuevo Libro</button>
 					</div>
 				</form>
 			</div>
