Syle Changes - Button names.

--- a/dev/Tpl/src/main/webapp/app/views/lendBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/lendBookPage.html
@@ -7,8 +7,7 @@
 				<legend>Prestar un libro</legend>
 				<!-- SELECT USUARIOS -->
 				<div class="form-group">
-					<label class="">Prestar a: </label> <select class="form-control"
-						ng-model="" ng-required="true">
+					<label class="">Prestar a: </label> <select class="form-control" ng-required="true">
 						<option>Dummy User 1</option>
 						<option>Dummy User 2</option>
 						<option>Dummy User 3</option>
@@ -18,8 +17,8 @@
 				<div class="col-md-8 col-md-offset-2">
 					<button type="button" class="btn btn-hexacta btn-block"
 						ng-click="save(newBook)">Prestar</button>
-					<button type="button" class="btn btn-default btn-block"
-						ng-click="reset()">Cancelar</button>
+					<!-- <button type="button" class="btn btn-default btn-block"
+						ng-click="reset()">Cancelar</button> -->
 					<button type="button" class="btn btn-default btn-block"
 						ng-click="backToHome()">Volver</button>
 				</div>
