--- a/dev/Tpl/src/main/webapp/app/views/createBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/createBookPage.html
@@ -53,7 +53,7 @@
 					<button type="button" class="btn btn-hexacta btn-block"
 						ng-click="save(newBook)">Guardar</button>
 					<button type="button" class="btn btn-default btn-block"
-						ng-click="reset()">Cancelar</button>
+						ng-click="reset()">Limpiar</button>
 					<button type="button" class="btn btn-default btn-block"
 						ng-click="backToHome()">Volver</button>
 				</div>
