--- a/dev/Tpl/src/main/webapp/app/views/editBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/editBookPage.html
@@ -48,10 +48,10 @@
 
 					<!-- BOTONES -->
 					<div class="col-md-8 col-md-offset-2">
-						<button type="button" class="btn btn-primary btn-block"
+						<button type="button" class="btn btn-hexacta-primary btn-block"
 							ng-click="save(newBook)">Guardar</button>
 						<button type="button" class="btn btn-default btn-block"
-							ng-click="reset()">Cancelar</button>
+							ng-click="reset()">Limpiar</button>
 						<button type="button" class="btn btn-default btn-block"
 							ng-click="backToHome()">Volver</button>
 					</div>
