--- a/dev/Tpl/src/main/webapp/app/views/createBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/createBookPage.html
@@ -13,10 +13,9 @@
 				</div>
 				<!-- DESCRIPCION -->
 				<div class="form-group">
-					<label class="">Descripci&oacute;n: </label> <input type="text"
-						class="form-control" ng-model="newBook.description"
-						ng-required="true" id="description" />
-
+					<label class="">Descripci&oacute;n: </label>
+					<textarea rows="3" id="description" class="form-control noResize"
+						ng-model="newBook.description" ng-required="true"> </textarea>
 				</div>
 				<!-- EDITORIAL -->
 				<div class="form-group">
