--- a/dev/Tpl/src/main/webapp/app/views/editBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/editBookPage.html
@@ -9,12 +9,13 @@
 					<!-- TITULO -->
 					<div class="form-group">
 						<label class="">T&iacute;tulo: </label> <input required
-							type="text" id="name" class="form-control" maxlength="150" />
+							type="text" id="name" class="form-control" maxlength="150">
+							{{books.name}} </input>
 					</div>
 					<!-- DESCRIPCION -->
 					<div class="form-group">
 						<label class="labelIzquierda">Descripci&oacute;n: </label> <input
-							required type="text" id="description" class="form-control" />
+							required type="text" id="description" class="form-control" value="{{books.description}}"/>
 					</div>
 					<!-- EDITORIAL -->
 					<div class="form-group">
