--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -16,7 +16,7 @@
 			<div class="col-md-12">
 				<table class="table table-striped table-bordered text-center">
 					<caption> <strong> Libros Disponibles </strong> </caption>
-					<thead class="text-center">
+					<thead class="text-center" style="color:#009292;">
 						<tr>
 							<th class="text-center"> T&iacute;tulo </th>
 							<th class="text-center"> Descripci&oacute;n </th>
@@ -27,7 +27,8 @@
 						</tr>
 					</thead>
 					<tbody ng-repeat="book in books | filter:query">
-						<tr>						
+						<tr onmouseover="this.style.fontStyle=700"
+							onmouseout="this.style.fontStyle=400">						
 							<!-- Fields -->
 							<!-- Hacer los td con vertical-align:middle -->							
 							<td>
