--- a/dev/Tpl/src/main/webapp/app/views/createBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/createBookPage.html
@@ -49,7 +49,7 @@
 				</div>
 				<!-- BOTONES -->
 				<div class="col-md-8 col-md-offset-2">
-					<button type="button" class="btn btn-hexacta-primary btn-block"
+					<button type="button" class="btn btn-hexacta-primary btn-block" ng-show="newBook.name.lenght"
 						ng-click="save(newBook)">Guardar</button>
 					<button type="button" class="btn btn-default btn-block"
 						ng-click="reset()">Limpiar</button>
