--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -14,7 +14,7 @@
 			</div>
 			
 			<div class="col-md-12">
-				<table class="table table-striped table-bordered text-center">
+				<table class="table table-striped table-bordered table-hover text-center">
 					<caption> <strong> Libros Disponibles </strong> </caption>
 					<thead class="text-center" style="color:#009292;">
 						<tr>
@@ -27,8 +27,7 @@
 						</tr>
 					</thead>
 					<tbody ng-repeat="book in books | filter:query">
-						<tr onmouseover="this.style.fontStyle=700"
-							onmouseout="this.style.fontStyle=400">						
+						<tr>						
 							<!-- Fields -->
 							<!-- Hacer los td con vertical-align:middle -->							
 							<td>
