--- a/dev/Tpl/src/main/webapp/app/views/editBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/editBookPage.html
@@ -9,8 +9,8 @@
 					<!-- TITULO -->
 					<div class="form-group">
 						<label class="">T&iacute;tulo: </label> <input required
-							type="text" id="name" class="form-control" maxlength="150">
-							{{books.name}} </input>
+							type="text" id="name" class="form-control" maxlength="150"
+							 ng-model="currentBook.name"/>
 					</div>
 
 					<!-- DESCRIPCION -->
