--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -1,6 +1,7 @@
 <section id="bookListPage">
 <div ng-controller="bookListCtrl">
 <div>
+
 	<div id="feedbackPanel" />
 			<div class="row">
 				<form role="form" class="col-md-12">
@@ -31,7 +32,7 @@
 							<!-- Fields -->
 							<!-- Hacer los td con vertical-align:middle -->							
 							<td>
-								{{book.name }} 
+								<a data-toggle="modal" data-target="#myModal" ng-click="modifyModal(book)">{{book.name}}</a> 
 							</td>
 							<td>
 								{{book.description}}
@@ -60,8 +61,27 @@
 					</tbody>
 			</table>
 		</div>
-		<div class="Clear"></div>
-	</div>
+
+			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h4 class="modal-title" id="myModalLabel">{{titleComments}}</h4>
+						</div>
+						<div class="modal-body">Ac&aacute; van a ir los comentarios
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default"
+								data-dismiss="modal">Cerrar</button>
+							<!-- <button type="button" class="btn btn-primary">Save	changes</button> -->
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="Clear"></div>
+		</div>
 </div>
 
 </section>
