--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -67,14 +67,33 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title" id="myModalLabel">{{titleComments}}</h4>
+							<h4 class="modal-title" id="myModalLabel">{{selectedBook.name}}</h4>
 						</div>
 						<div class="modal-body">Ac&aacute; van a ir los comentarios
+							<blockquote ng-repeat="comment in selectedBook.comments">
+								{{comment.text}}
+								<cite>Por: {{comment.author}}</cite>
+							</blockquote>
+							<form role="form" name="commentForm" ng-controller="CommentController as commentCtrl" ng-submit="commentCtrl.addComment(selectedBook)">
+								<div class="form-group">
+									<label for="txtCommentText">Comentario</label>
+									<textarea ng-model="comment.text" class="form-control"
+										placeholder="Escriba aqu&iacute; su comentario"
+										id="txtCommentText"></textarea>
+								</div>
+								<div class="form-group">
+									<label for="txtCommentAuthor">Email:</label> <input
+										type="email" ng-model="comment.author" class="form-control"
+										placeholder="ejemplo@hexacta.com" id="txtCommentAuthor" />
+								</div>
+								<input type="submit" value="Submit"
+									class="btn btn-hexacta-green btn-sm" />
+							</form>
 						</div>
+						
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default"
 								data-dismiss="modal">Cerrar</button>
-							<!-- <button type="button" class="btn btn-primary">Save	changes</button> -->
 						</div>
 					</div>
 				</div>
