--- a/dev/Tpl/src/main/webapp/css/bootstrap.css
+++ b/dev/Tpl/src/main/webapp/css/bootstrap.css
@@ -186,6 +186,7 @@ table {
 td,
 th {
   padding: 0;
+  vertical-align: middle;
 }
 @media print {
   * {
@@ -2076,7 +2077,7 @@ th {
 .table > tfoot > tr > td {
   padding: 8px;
   line-height: 1.42857143;
-  vertical-align: top;
+  vertical-align: center;
   border-top: 1px solid #ddd;
 }
 .table > thead > tr > th {
