--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -91,19 +91,19 @@
 							
 							Ac&aacute; van a ir los comentarios
 							<blockquote ng-repeat="comment in selectedBook.comments">
-								{{comment.text}}
-								<cite>Por: {{comment.author}}</cite>
+								{{comment.body}}
+								<cite>Por: {{comment.user}}</cite>
 							</blockquote>
 							<form role="form" name="commentForm" ng-submit="commentForm.$valid && addComment(selectedBook)" novalidate>
 								<div class="form-group">
 									<label for="txtCommentText">Comentario</label>
-									<textarea ng-model="comment.text" class="form-control"
+									<textarea ng-model="comment.body" class="form-control"
 										placeholder="Escriba aqu&iacute; su comentario"
 										id="txtCommentText" required></textarea>
 								</div>
 								<div class="form-group">
 									<label for="txtCommentAuthor">Email:</label> 
-									<input type="email" ng-model="comment.author" class="form-control" placeholder="ejemplo@hexacta.com" id="txtCommentAuthor" required/>
+									<input type="email" ng-model="comment.user" class="form-control" placeholder="ejemplo@hexacta.com" id="txtCommentAuthor" required/>
 								</div>
 								
 								<input type="submit" value="Crear comentario" class="btn btn-hexacta-green btn-sm" />
