--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -74,7 +74,7 @@
 
 			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
-					<div class="modal-content" ng-controller="commentController">
+					<div class="modal-content">
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 							<h3 class="modal-title" id="myModalLabel">{{selectedBook.name}}</h3>
@@ -89,8 +89,8 @@
 							
 							<!-- TODO: en algun momento se va a agregar una foto para poner aca -->
 							
-							Ac&aacute; van a ir los comentarios
-							<blockquote ng-repeat="comment in selectedBook.comments">
+							Comentarios:
+							<blockquote ng-repeat="comment in selectedBook.bookComments">
 								{{comment.body}}
 								<cite>Por: {{comment.user}}</cite>
 							</blockquote>
