--- a/dev/Tpl/src/main/webapp/app/views/editBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/editBookPage.html
@@ -50,10 +50,10 @@
 					</div>
 
 
-					<!-- BOTONES -->
+					<!-- BOTONES editBookForm.$valid && -->
 					<div class="col-md-8 col-md-offset-2">
 						<button type="button" class="btn btn-hexacta-primary btn-block"
-							ng-click="editBookForm.$valid && save(newBook)">Guardar</button>
+							ng-click="save(currentBook)">Guardar</button>
 						<button type="button" class="btn btn-default btn-block"
 							ng-click="reset()">Limpiar</button>
 						<button type="button" class="btn btn-default btn-block"
