--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -60,7 +60,11 @@
 					</tbody>
 			</table>
 		</div>
-		<div class="Clear"></div>
+		
+		<div class="form-group col-md-3">
+						<button type="button" class="btn btn-hexacta-primary col-md-12" ng-click="linkToLogIn()">Loguearse</button>
+					</div>
+		
 	</div>
 </div>
 
