--- a/dev/Tpl/src/main/webapp/app/views/deleteBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/deleteBookPage.html
@@ -7,7 +7,7 @@
 				<legend>BORRAR un libro</legend>
 				<!-- SELECT USUARIOS -->
 				<div class="form-group">
-					<label class="">¿Seguro que quiere borrar?</label>
+					<label class="">Seguro que quiere borrar?</label>
 				</div>
 				<!-- BOTONES -->
 				<div class="col-md-8 col-md-offset-2">
