--- a/dev/Tpl/src/main/webapp/app/views/logInPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/logInPage.html
@@ -5,12 +5,12 @@
 <div class="container">
     <div class="row">
 
-            <h2 class="text-center login-title">Log in to continue to Hexacta e-BookStore</h1>
+            <h2 class="text-center login-title">Log in to continue to Hexacta e-BookStore</h2>
             <div class="account-wall">
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                     alt="">
                 <form class="form-signin">
-                <input type="text" class="form-control" placeholder="Email" required autofocus>
+                <input type="text" class="form-control" placeholder="User" required autofocus>
                 <input type="password" class="form-control" placeholder="Password" required>
                 <button class="btn btn-lg btn-primary btn-block" ng-click="backToHome()" type="submit">
                     Log in</button>
@@ -26,6 +26,5 @@
     </div>
 </div>
 
-	</div>
 </section>
 
