--- a/dev/Tpl/src/main/webapp/app/views/createBookPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/createBookPage.html
@@ -1,7 +1,8 @@
 <section id="createBook">
 	<div class="container jumbotron col-md-6 col-md-offset-3"
 		ng-controller="createBookCtrl">
-		<form name="createBookForm" novalidate id="createBookForm">
+		<form name="createBookForm" novalidate id="createBookForm"
+			ng-submit="createBookForm.$valid && save(newBook)">
 			<div class="col-md-8 col-md-offset-2" id="feedbackPanel" />
 			<fieldset>
 				<legend> Crear nuevo libro </legend>
@@ -37,9 +38,6 @@
 				<!-- CHECKBOX CATEGORIAS -->
 				<div class="form-group">
 					<label class="">Categorias:</label>
-					<!--  <input class=""
-						wicket:id="selectCheckBox" id="selectCheckBox1" type="checkbox" />
-					<strong><span wicket:id="name" id="name" /></strong> -->
 					<div class="col-md-8 col-md-offset-2 checkbox">
 						<label class="checkbox-inline"><input class=""
 							id="selectCheckBox1" type="checkbox" /> eBook</label> <label
@@ -49,8 +47,7 @@
 				</div>
 				<!-- BOTONES -->
 				<div class="col-md-8 col-md-offset-2">
-					<button type="button" class="btn btn-hexacta-primary btn-block"
-						ng-click="createBookForm.$valid && save(newBook)">Guardar</button>
+					<button type="submit" class="btn btn-hexacta-primary btn-block">Guardar</button>
 					<button type="button" class="btn btn-default btn-block"
 						ng-click="reset()">Limpiar</button>
 					<button type="button" class="btn btn-default btn-block"
