--- a/dev/Tpl/src/main/webapp/app/views/loginView.html
+++ b/dev/Tpl/src/main/webapp/app/views/loginView.html
@@ -1,7 +1,7 @@
 <form class="navbar-form navbar-right" role="search"  ng-submit="validateAndSubmit()">
 	<div class="form-group">
 		<input type="text" ng-model="user.name" class="form-control input-sm" placeholder="User" />
-		<input type="password" ng-model="user.email" class="form-control input-sm" placeholder="Password" />
+		<input type="password" ng-model="user.pass" class="form-control input-sm" placeholder="Password" />
 	</div>
 	<button type="submit" class="btn btn-default input-sm">Entrar</button>
 </form>
