6/8 Registro en pagina aparte

--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -10,7 +10,6 @@
 
 <section id="bookListPage">
 <div ng-controller="bookListCtrl" >
-<div ng-hide="paginaPrincipal">
 
 	<div id="feedbackPanel" />
 			<div class="row">
@@ -73,7 +72,7 @@
 		</div>
 
 		<div class="form-group col-md-3">
-						<button type="button" class="btn btn-hexacta-primary col-md-12" ng-model="paginaPrincipal" ng-click="linkToLogIn()">Loguearse</button>
+						<button type="button" class="btn btn-hexacta-primary col-md-12" ng-click="linkToRegister()">Registrarse</button>
 					</div>
 		
 	</div>
