--- a/dev/Tpl/src/main/webapp/app/views/registerPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/registerPage.html
@@ -1,30 +1,30 @@
-<section id="logInBook">
+<section id="register">
 	<div class="container jumbotron col-md-6 col-md-offset-3"
-		ng-controller="logInCtrl">
+		ng-controller="registerCtrl">
 		
 <div class="container">
     <div class="row">
 
-            <h2 class="text-center login-title">Log in to continue to Hexacta e-BookStore</h2>
+            <h2 class="text-center login-title">Register to continue to the magnificent Hexacta e-BookStore</h2>
             <div class="account-wall">
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                     alt="">
-                <form class="form-signin">
+                <form name="registerForm" class="form-signin" ng-submit="registerForm.$valid && backToHome()">
                 <input type="text" class="form-control" placeholder="User" required autofocus>
-                <input type="password" class="form-control" placeholder="Password" required>
-                <button class="btn btn-lg btn-primary btn-block" ng-click="backToHome()" type="submit">
-                    Log in</button>
+                <input ng-model="pass" id="pass" ng-minlength="6" type="password" class="form-control" placeholder="Password" required>
+                <input ng-model="pass2" id="pass2" ng-minlength="6" type="password" class="form-control" placeholder="Repeat Password" required>
+                <button type="submit" class="btn btn-lg btn-primary btn-block">
+                    Register!</button>
                 <label class="checkbox pull-left">
                     <input type="checkbox" value="remember-me">
                     Remember me
                 </label>
                 <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
+                               
                 </form>
             </div>
-            <a href="#" class="text-center new-account">Create an account </a>
         </div>
     </div>
 </div>
 
 </section>
-
