--- a/dev/Tpl/src/main/webapp/app/views/loginView.html
+++ b/dev/Tpl/src/main/webapp/app/views/loginView.html
@@ -1,4 +1,4 @@
-<form class="navbar-form navbar-right" role="search"  ng-submit="validateAndSubmit()">
+<form class="navbar-form navbar-right" role="search"  ng-submit="validateUser(user)">
 	<div class="form-group">
 		<input type="text" ng-model="user.name" class="form-control input-sm" placeholder="User" />
 		<input type="password" ng-model="user.pass" class="form-control input-sm" placeholder="Password" />
